# aq2ledger

./: .gitignore  README.org  aq2ledger.cabal  buchhaltung2.cabal  default.nix  pre-commit  release.nix  setup-dkb  setup-ksk  shell.nix
src/: Aq2Ledger.hs  Main.hs  Test.hs
src/Aq2Ledger/: AqBanking.hs  BankAccount.hs  Config.hs  Format.hs  Hledger.hs  Options.hs  Parse.hs  Prelude.hs
src/Aq2Ledger/AqBanking/: Request.hs  Setup.hs
src/Aq2Ledger/Parse/: IBAN.hs
src/Buchhaltung/: AqBanking.hs  Aqbanking.hs  BankAccount.hs  Config.hs  Format.hs  Hledger.hs  Options.hs  Parse.hs  Prelude.hs
src/Buchhaltung/AqBanking/: Request.hs  Setup.hs
src/Buchhaltung/Aqbanking/: ConnectionConfig.hs  Request.hs
src/Buchhaltung/Parse/: IBAN.hs
