cabal-version:       2.2
name:                aq2ledger
version:             0.1.0.0
synopsis:            Automates plain text accounting data entry in ledger format
description:         (Partial) rewrite of the 'buchhaltung' tool by Johannes
                     Gerer (see http://johannesgerer.com/buchhaltung).
bug-reports:         https://github.com/dpaetzel/aq2ledger/issues
homepage:            https://github.com/dpaetzel/aq2ledger
license:             GPL-3.0-only
license-file:        LICENSE
author:              David Pätzel
maintainer:          David Pätzel <david.paetzel@posteo.de>
copyright:           Copyright (c): 2020 David Pätzel
category:            Finance
extra-source-files:  config.yml

executable aq2ledger
  default-language:    Haskell2010
  build-depends:       aeson
                     , base ^>=4.12.0.0
                     , bytestring
                     , Decimal
                     , directory
                     , extra
                     , filepath
                     , hledger-lib
                     , mtl
                     , optparse-applicative
                     , parsec
                     , process
                     , protolude
                     , QuickCheck
                     , quickcheck-instances
                     , text
                     , time
                     , yaml
  ghc-options:         -Wunused-imports
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Aq2Ledger
                     , Aq2Ledger.AqBanking
                     , Aq2Ledger.AqBanking.Request
                     , Aq2Ledger.BankAccount
                     , Aq2Ledger.Config
                     , Aq2Ledger.Format
                     , Aq2Ledger.Hledger
                     , Aq2Ledger.Options
                     , Aq2Ledger.Parse
                     , Aq2Ledger.Parse.IBAN
                     , Aq2Ledger.Prelude

library
  default-language:    Haskell2010
  build-depends:       aeson
                     , base ^>=4.12.0.0
                     , bytestring
                     , Decimal
                     , directory
                     , extra
                     , filepath
                     , hledger-lib
                     , mtl
                     , optparse-applicative
                     , parsec
                     , process
                     , protolude
                     , QuickCheck
                     , quickcheck-instances
                     , text
                     , time
                     , yaml
  exposed-modules:     Aq2Ledger
                     , Aq2Ledger.AqBanking
                     , Aq2Ledger.AqBanking.Request
                     , Aq2Ledger.BankAccount
                     , Aq2Ledger.Config
                     , Aq2Ledger.Format
                     , Aq2Ledger.Hledger
                     , Aq2Ledger.Options
                     , Aq2Ledger.Parse
                     , Aq2Ledger.Parse.IBAN
                     , Aq2Ledger.Prelude
                     , Main
  -- ghc-options:         -Wall -Wno-name-shadowing -Wno-orphans
  ghc-options:         -Wunused-imports
  hs-source-dirs:      src

executable aq2ledger-test
  build-depends:       aeson
                     , base ^>=4.12.0.0
                     , bytestring
                     , Decimal
                     , directory
                     , extra
                     , filepath
                     , hledger-lib
                     , mtl
                     , optparse-applicative
                     , parsec
                     , process
                     , protolude
                     , QuickCheck
                     , quickcheck-instances
                     , text
                     , time
                     , yaml
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Test.hs
  other-modules:       Aq2Ledger
                     , Aq2Ledger.AqBanking
                     , Aq2Ledger.AqBanking.Request
                     , Aq2Ledger.BankAccount
                     , Aq2Ledger.Config
                     , Aq2Ledger.Format
                     , Aq2Ledger.Hledger
                     , Aq2Ledger.Options
                     , Aq2Ledger.Parse
                     , Aq2Ledger.Parse.IBAN
                     , Aq2Ledger.Prelude
