cabal-version:       2.2
name:                buchhaltung2
version:             0.1.0.0
synopsis:            Automates plain text accounting data entry in ledger format
description:         (Partial) rewrite of the 'buchhaltung' tool by Johannes
                     Gerer (see http://johannesgerer.com/buchhaltung).
bug-reports:         https://github.com/dpaetzel/buchhaltung2/issues
homepage:            https://github.com/dpaetzel/buchhaltung2
license:             GPL-3.0-only
license-file:        LICENSE
author:              David Pätzel
maintainer:          David Pätzel <david.paetzel@posteo.de>
copyright:           Copyright (c): 2019 David Pätzel
category:            Finance
extra-source-files:  config.yml

executable buchhaltung2
  main-is:             Main.hs
  other-modules:
                       Buchhaltung.Aqbanking
                     , Buchhaltung.Aqbanking.ConnectionConfig
                     , Buchhaltung.Aqbanking.Request
                     , Buchhaltung.Config
                     , Buchhaltung.Format
                     , Buchhaltung.Prelude
  build-depends:       aeson
                     , base ^>=4.12.0.0
                     , bytestring
                     , Decimal
                     , directory
                     , filepath
                     , hledger-lib
                     , mtl
                     , parsec
                     , process
                     , protolude
                     , QuickCheck
                     , text
                     , time
  hs-source-dirs:      src
  default-language:    Haskell2010

library
  other-modules:       Buchhaltung.Aqbanking
                     , Buchhaltung.Aqbanking.ConnectionConfig
                     , Buchhaltung.Aqbanking.Request
                     , Buchhaltung.Config
                     , Buchhaltung.Format
                     , Buchhaltung.Prelude
                     , Main
  build-depends:       aeson
                     , base ^>=4.12.0.0
                     , bytestring
                     , Decimal
                     , directory
                     , filepath
                     , hledger-lib
                     , mtl
                     , parsec
                     , process
                     , protolude
                     , QuickCheck
                     , text
                     , time
  hs-source-dirs:      src
  default-language:    Haskell2010

executable buchhaltung2-test
  main-is:             Test.hs
  other-modules:
                       Buchhaltung.Aqbanking
                     , Buchhaltung.Aqbanking.ConnectionConfig
                     , Buchhaltung.Aqbanking.Request
                     , Buchhaltung.Config
                     , Buchhaltung.Format
                     , Buchhaltung.Prelude
  build-depends:       aeson
                     , base ^>=4.12.0.0
                     , bytestring
                     , Decimal
                     , directory
                     , filepath
                     , hledger-lib
                     , mtl
                     , parsec
                     , process
                     , protolude
                     , QuickCheck
                     , text
                     , time
  hs-source-dirs:      src
  default-language:    Haskell2010