cabal-version:       2.2
name:                buchhaltung2
version:             0.1.0.0
synopsis:            Automates plain text accounting data entry in ledger format
description:         (Partial) rewrite of the 'buchhaltung' tool by Johannes
                     Gerer (see http://johannesgerer.com/buchhaltung).
bug-reports:         https://github.com/dpaetzel/buchhaltung2/issues
homepage:            https://github.com/dpaetzel/buchhaltung2
license:             GPL-3.0-only
license-file:        LICENSE
author:              David Pätzel
maintainer:          David Pätzel <david.paetzel@posteo.de>
copyright:           Copyright (c): 2019 David Pätzel
category:            Finance
extra-source-files:  config.yml

executable buchhaltung2
  default-language:    Haskell2010
  build-depends:       aeson
                     , base ^>=4.12.0.0
                     , bytestring
                     , Decimal
                     , directory
                     , extra
                     , filepath
                     , hledger-lib
                     , mtl
                     , optparse-applicative
                     , parsec
                     , process
                     , protolude
                     , QuickCheck
                     , quickcheck-instances
                     , text
                     , time
                     , yaml
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Buchhaltung
                     , Buchhaltung.AqBanking
                     , Buchhaltung.AqBanking.Request
                     , Buchhaltung.BankAccount
                     , Buchhaltung.Config
                     , Buchhaltung.Format
                     , Buchhaltung.Hledger
                     , Buchhaltung.Options
                     , Buchhaltung.Parse
                     , Buchhaltung.Parse.IBAN
                     , Buchhaltung.Prelude
                     , Test.QuickCheck.Hledger

library
  default-language:    Haskell2010
  build-depends:       aeson
                     , base ^>=4.12.0.0
                     , bytestring
                     , Decimal
                     , directory
                     , extra
                     , filepath
                     , hledger-lib
                     , mtl
                     , optparse-applicative
                     , parsec
                     , process
                     , protolude
                     , QuickCheck
                     , quickcheck-instances
                     , text
                     , time
                     , yaml
  exposed-modules:     Buchhaltung
                     , Buchhaltung.AqBanking
                     , Buchhaltung.AqBanking.Request
                     , Buchhaltung.BankAccount
                     , Buchhaltung.Config
                     , Buchhaltung.Format
                     , Buchhaltung.Hledger
                     , Buchhaltung.Options
                     , Buchhaltung.Parse
                     , Buchhaltung.Parse.IBAN
                     , Buchhaltung.Prelude
                     , Main
                     , Test.QuickCheck.Hledger
  -- ghc-options:         -Wall -Wno-name-shadowing -Wno-orphans
  ghc-options:         -Wunused-imports
  hs-source-dirs:      src

executable buchhaltung2-test
  build-depends:       aeson
                     , base ^>=4.12.0.0
                     , bytestring
                     , Decimal
                     , directory
                     , extra
                     , filepath
                     , hledger-lib
                     , mtl
                     , parsec
                     , process
                     , protolude
                     , QuickCheck
                     , quickcheck-instances
                     , text
                     , time
                     , yaml
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Test.hs
  other-modules:       Buchhaltung
                     , Buchhaltung.AqBanking
                     , Buchhaltung.AqBanking.Request
                     , Buchhaltung.BankAccount
                     , Buchhaltung.Config
                     , Buchhaltung.Format
                     , Buchhaltung.Hledger
                     , Buchhaltung.Options
                     , Buchhaltung.Parse
                     , Buchhaltung.Parse.IBAN
                     , Buchhaltung.Prelude
                     , Test.QuickCheck.Hledger
